Correctly align messages

--- a/style.css
+++ b/style.css
@@ -29,9 +29,9 @@
     border-radius: 12px;
     padding: 5px;
     width: 90px;
-    background: lightblue;
-    position: relative;
-    right: 5px;
+    background: #C2E7F3;
+    margin-left: auto;
+    margin-right: 0px;
 }
 
 .otherMessage {
@@ -40,7 +40,7 @@
     border-radius: 12px;
     padding: 5px;
     width: 90px;
-    background: lightgreen;
-    position: relative;
-    left: 5px;
+    background: #B2EFB2;
+    margin-left: 0px;
+    margin-right: auto;
 }
